<resources>
    <string name="MT_Bin">Navigate home</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100001">Navigate up</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100002">More options</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100003">Done</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100004">See all</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100005">Choose an app</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100006">OFF</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100007">ON</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100008">Alt+</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100009">Ctrl+</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f10000a">delete</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f10000b">enter</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f10000c">Function+</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f10000d">Meta+</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f10000e">Shift+</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f10000f">space</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100010">Sym+</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100011">Menu+</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100012">Search…</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100013">Clear query</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100014">Search query</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100015">Search</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100016">Submit query</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100017">Voice search</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100018">Share with</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100019">Share with %s</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f10001a">Collapse</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f10001b">msp-sdk-account</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f10001c">ATBFAiAH+WYVTI7ohw3gFum9moYZzdQHilhD8JL8+8XCOT2hFAIhAM0K2WCmxK/HQwCZY/URx0gslEw9z/bRpNhuiDMqmKNVX5po22Vwb25hLHNldFRlbXBvcmFyeUF1dG9CcmlnaHRuZXNzQWRqdXN0bWVudCxzZXRSaW5nZXJNb2RlSW50ZXJuYWwsU2V0dGluZ3MuU2VjdXJlLFNldHRpbmdzLlN5c3RlbSxzdGFydEFjdGl2aXR5bgAAAA==</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f10001d">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f10001e">%1$s 该模式仅限内部人员测试使用，此功能可能会上报您的个人信息（包括但不限于IMEI）用于系统功能测试，请谨慎选择是否进入。</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f10001f">注意</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100020">Add 3D Face Beauty</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100021">3D retouching</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100022">Cancel</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100023">Cheekbone</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100024">Chin</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100025">Please continue turning your head left</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100026">Please continue turning your head right</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100027">Custom retouching</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100028">Tap your facial features for minor adjustments</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100029">Custom 3D retouched look created</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f10002a">Delete</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f10002b">Eye size</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f10002c">"Blurred face image. Please don't sway your head when recording"</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f10002d">Face has changed</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f10002e">Please keep your face and the phone closer</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f10002f">Facial Analysis</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100030">Please keep your face and the phone farther</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f10007c">Capture ultra clear portraits</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f10007d">AI ultra clear mode</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100081">AI scene recognition</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1000c7">Apply a special watermark when photos are taken with a makeup effect.</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1000c8">Makeup</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1000da">Photo/Video format</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1000db">Light Effects for Selfie Timer</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f10011b">Portrait distortion correction</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100170">Fingerprint Shooting</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100180">Show your palm to the front camera to take a photo.</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100181">Show palm</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100191">Take 10-bit photos in the \"Photo\" and \"Night\" modes using the rear camera. Photos will only be saved in the HEIF format and can only be displayed on a compatible device or app that supports 10-bit color.</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100192">10-bit color</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1001c6">Double press either volume button to launch the camera when the screen is off. (Not available during audio playback)</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1001ce">Display location information in photo/video details.</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1001cf">Location</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1001e0">off</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1001e1">Only when using the front camera</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100263">Save in RAW format under Professional mode</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100278">"Scan QR codes using the rear camera's Photo mode"</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f10027a">QR code scanning</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f10029d">Flip selfie</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f10029f">Advanced settings</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1002a5">Shooting methods</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1002a6">Composition</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1002a7">Use features like level and grid to compose your photos better.</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1002a8">Quick launch gestures</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1002a9">GENERAL</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1002aa">off</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1002ab">Show dirty lens warning</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1002ac">Receive a prompt when a stain is detected on the lens.</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1002af">Level</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1002b0">Display visual aids to get straight and level photos or videos.</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1002b2">Help &amp; feedback</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1002bb">Touch and hold shutter button</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1002bc">fast_record_video</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1002cf">On</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1002d0">Settings</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1002d1">PHOTO</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1002d7">GRIDS AND GUIDES</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1002db">Photo</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1002dc">Video</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1002dd">Restore Camera settings</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1002e6">None</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1002f1">Focus lock</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1002f4">Double-tap an area on the screen to lock focus on it.</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1002f6">VIDEO</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1002f7">Video encoding</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1002fc">Watermarks</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1002fe">Author name</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100303">Watermark information</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100312">Watermark position</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100318">Default</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f10031b">Size</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f10032c">Shutter sound</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100335">off</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100374">Save to SD card</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100393">Tap on the frame to take a photo.</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100394">Tap to capture</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1003c3">H264</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1003cc">all_around</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1003cd">Reduce wind noise</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1003ce">Video Stabilizer</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1003db">Sound Focus</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1003dc">Sound recorded from your front will be amplified and the volume of the subject will be automatically adjusted as you zoom in or out.</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1003ee">Standard</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1003f0">3D Recorder</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1003f1">Record stereo sound when taking videos in landscape mode.</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100406">Audio effects</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100410">shutter</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100411">Use the volume buttons for</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100413">Volume button action</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100449">Eight</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f10044e">Five</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f10044f">Four</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f10045e">Nine</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100460">One</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100465">Period</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100472">Seven</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100474">Six</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100476">Space</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100479">Three</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f10047a">Two</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f10047b">Underscore</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f10047f">Zero</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f100486">OK</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f1004fb">ABC</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f10051a">Quick share &amp; edit</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f10051c">Display shortcuts to share and edit the photo or video you just took.</string>
</resources>