<?xml version="1.0" encoding="utf-8"?>
<Keyboard app:APKTOOL_DUPLICATE_attr_0x7f0402a8="@dimen/APKTOOL_DUPLICATE_dimen_0x7f070297"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <Row app:APKTOOL_DUPLICATE_attr_0x7f0401b2="@dimen/APKTOOL_DUPLICATE_dimen_0x7f070290" app:APKTOOL_DUPLICATE_attr_0x7f0401bc="@dimen/APKTOOL_DUPLICATE_dimen_0x7f070293" app:APKTOOL_DUPLICATE_attr_0x7f040215="APKTOOL_DUPLICATE_id_0x7f090312" app:APKTOOL_DUPLICATE_attr_0x7f0402a8="@dimen/APKTOOL_DUPLICATE_dimen_0x7f070294">
        <Key app:APKTOOL_DUPLICATE_attr_0x7f040194="@dimen/APKTOOL_DUPLICATE_dimen_0x7f070296" app:APKTOOL_DUPLICATE_attr_0x7f0401ad="@string/APKTOOL_DUPLICATE_string_0x7f100460" app:APKTOOL_DUPLICATE_attr_0x7f0401b1="APKTOOL_DUPLICATE_id_0x7f090194" app:APKTOOL_DUPLICATE_attr_0x7f0401b4="1" />
        <Key app:APKTOOL_DUPLICATE_attr_0x7f040194="@dimen/APKTOOL_DUPLICATE_dimen_0x7f070292" app:APKTOOL_DUPLICATE_attr_0x7f0401ad="@string/APKTOOL_DUPLICATE_string_0x7f10047a" app:APKTOOL_DUPLICATE_attr_0x7f0401b4="2" />
        <Key app:APKTOOL_DUPLICATE_attr_0x7f040194="@dimen/APKTOOL_DUPLICATE_dimen_0x7f070292" app:APKTOOL_DUPLICATE_attr_0x7f0401ad="@string/APKTOOL_DUPLICATE_string_0x7f100479" app:APKTOOL_DUPLICATE_attr_0x7f0401b4="3" />
        <Key app:APKTOOL_DUPLICATE_attr_0x7f040156="-5" app:APKTOOL_DUPLICATE_attr_0x7f040194="@dimen/APKTOOL_DUPLICATE_dimen_0x7f070292" app:APKTOOL_DUPLICATE_attr_0x7f0401a8="true" app:APKTOOL_DUPLICATE_attr_0x7f0401b1="APKTOOL_DUPLICATE_id_0x7f09024c" app:APKTOOL_DUPLICATE_attr_0x7f0401b3="@drawable/APKTOOL_DUPLICATE_drawable_0x7f0802f0" app:APKTOOL_DUPLICATE_attr_0x7f0401bc="@dimen/APKTOOL_DUPLICATE_dimen_0x7f07028f" />
    </Row>
    <Row app:APKTOOL_DUPLICATE_attr_0x7f0401b2="@dimen/APKTOOL_DUPLICATE_dimen_0x7f070290" app:APKTOOL_DUPLICATE_attr_0x7f0401bc="@dimen/APKTOOL_DUPLICATE_dimen_0x7f070293" app:APKTOOL_DUPLICATE_attr_0x7f0402a8="@dimen/APKTOOL_DUPLICATE_dimen_0x7f070294">
        <Key app:APKTOOL_DUPLICATE_attr_0x7f040194="@dimen/APKTOOL_DUPLICATE_dimen_0x7f070296" app:APKTOOL_DUPLICATE_attr_0x7f0401ad="@string/APKTOOL_DUPLICATE_string_0x7f10044f" app:APKTOOL_DUPLICATE_attr_0x7f0401b1="APKTOOL_DUPLICATE_id_0x7f090194" app:APKTOOL_DUPLICATE_attr_0x7f0401b4="4" />
        <Key app:APKTOOL_DUPLICATE_attr_0x7f040194="@dimen/APKTOOL_DUPLICATE_dimen_0x7f070292" app:APKTOOL_DUPLICATE_attr_0x7f0401ad="@string/APKTOOL_DUPLICATE_string_0x7f10044e" app:APKTOOL_DUPLICATE_attr_0x7f0401b4="5" />
        <Key app:APKTOOL_DUPLICATE_attr_0x7f040194="@dimen/APKTOOL_DUPLICATE_dimen_0x7f070292" app:APKTOOL_DUPLICATE_attr_0x7f0401ad="@string/APKTOOL_DUPLICATE_string_0x7f100474" app:APKTOOL_DUPLICATE_attr_0x7f0401b4="6" />
        <Key app:APKTOOL_DUPLICATE_attr_0x7f040194="@dimen/APKTOOL_DUPLICATE_dimen_0x7f070292" app:APKTOOL_DUPLICATE_attr_0x7f0401ad="@string/APKTOOL_DUPLICATE_string_0x7f10047b" app:APKTOOL_DUPLICATE_attr_0x7f0401b1="APKTOOL_DUPLICATE_id_0x7f09024c" app:APKTOOL_DUPLICATE_attr_0x7f0401b4="_" app:APKTOOL_DUPLICATE_attr_0x7f0401bc="@dimen/APKTOOL_DUPLICATE_dimen_0x7f07028f" />
    </Row>
    <Row app:APKTOOL_DUPLICATE_attr_0x7f0401b2="@dimen/APKTOOL_DUPLICATE_dimen_0x7f070290" app:APKTOOL_DUPLICATE_attr_0x7f0401bc="@dimen/APKTOOL_DUPLICATE_dimen_0x7f070293" app:APKTOOL_DUPLICATE_attr_0x7f0402a8="@dimen/APKTOOL_DUPLICATE_dimen_0x7f070294">
        <Key app:APKTOOL_DUPLICATE_attr_0x7f040194="@dimen/APKTOOL_DUPLICATE_dimen_0x7f070296" app:APKTOOL_DUPLICATE_attr_0x7f0401ad="@string/APKTOOL_DUPLICATE_string_0x7f100472" app:APKTOOL_DUPLICATE_attr_0x7f0401b1="APKTOOL_DUPLICATE_id_0x7f090194" app:APKTOOL_DUPLICATE_attr_0x7f0401b4="7" />
        <Key app:APKTOOL_DUPLICATE_attr_0x7f040194="@dimen/APKTOOL_DUPLICATE_dimen_0x7f070292" app:APKTOOL_DUPLICATE_attr_0x7f0401ad="@string/APKTOOL_DUPLICATE_string_0x7f100449" app:APKTOOL_DUPLICATE_attr_0x7f0401b4="8" />
        <Key app:APKTOOL_DUPLICATE_attr_0x7f040194="@dimen/APKTOOL_DUPLICATE_dimen_0x7f070292" app:APKTOOL_DUPLICATE_attr_0x7f0401ad="@string/APKTOOL_DUPLICATE_string_0x7f10045e" app:APKTOOL_DUPLICATE_attr_0x7f0401b4="9" />
        <Key app:APKTOOL_DUPLICATE_attr_0x7f040194="@dimen/APKTOOL_DUPLICATE_dimen_0x7f070292" app:APKTOOL_DUPLICATE_attr_0x7f0401ad="@string/APKTOOL_DUPLICATE_string_0x7f100465" app:APKTOOL_DUPLICATE_attr_0x7f0401b1="APKTOOL_DUPLICATE_id_0x7f09024c" app:APKTOOL_DUPLICATE_attr_0x7f0401b4="." app:APKTOOL_DUPLICATE_attr_0x7f0401bc="@dimen/APKTOOL_DUPLICATE_dimen_0x7f07028f" />
    </Row>
    <Row app:APKTOOL_DUPLICATE_attr_0x7f0401b2="@dimen/APKTOOL_DUPLICATE_dimen_0x7f070290" app:APKTOOL_DUPLICATE_attr_0x7f0401bc="@dimen/APKTOOL_DUPLICATE_dimen_0x7f070293" app:APKTOOL_DUPLICATE_attr_0x7f040215="APKTOOL_DUPLICATE_id_0x7f09006d" app:APKTOOL_DUPLICATE_attr_0x7f0402a8="@dimen/APKTOOL_DUPLICATE_dimen_0x7f07028c">
        <Key app:APKTOOL_DUPLICATE_attr_0x7f040156="-2" app:APKTOOL_DUPLICATE_attr_0x7f040194="@dimen/APKTOOL_DUPLICATE_dimen_0x7f070291" app:APKTOOL_DUPLICATE_attr_0x7f0401b1="APKTOOL_DUPLICATE_id_0x7f090194" app:APKTOOL_DUPLICATE_attr_0x7f0401b4="\?#+" app:APKTOOL_DUPLICATE_attr_0x7f0401bc="@dimen/APKTOOL_DUPLICATE_dimen_0x7f07028d" />
        <Key app:APKTOOL_DUPLICATE_attr_0x7f040156="-6" app:APKTOOL_DUPLICATE_attr_0x7f040194="@dimen/APKTOOL_DUPLICATE_dimen_0x7f070292" app:APKTOOL_DUPLICATE_attr_0x7f0401b4="@string/APKTOOL_DUPLICATE_string_0x7f1004fb" />
        <Key app:APKTOOL_DUPLICATE_attr_0x7f040194="@dimen/APKTOOL_DUPLICATE_dimen_0x7f070292" app:APKTOOL_DUPLICATE_attr_0x7f0401ad="@string/APKTOOL_DUPLICATE_string_0x7f10047f" app:APKTOOL_DUPLICATE_attr_0x7f0401b4="0" />
        <Key app:APKTOOL_DUPLICATE_attr_0x7f040156="32" app:APKTOOL_DUPLICATE_attr_0x7f040194="@dimen/APKTOOL_DUPLICATE_dimen_0x7f070292" app:APKTOOL_DUPLICATE_attr_0x7f0401ad="@string/APKTOOL_DUPLICATE_string_0x7f100476" app:APKTOOL_DUPLICATE_attr_0x7f0401b3="@drawable/APKTOOL_DUPLICATE_drawable_0x7f0802fc" />
        <Key app:APKTOOL_DUPLICATE_attr_0x7f040156="10" app:APKTOOL_DUPLICATE_attr_0x7f040194="@dimen/APKTOOL_DUPLICATE_dimen_0x7f070292" app:APKTOOL_DUPLICATE_attr_0x7f0401b1="APKTOOL_DUPLICATE_id_0x7f09024c" app:APKTOOL_DUPLICATE_attr_0x7f0401b4="@string/APKTOOL_DUPLICATE_string_0x7f100486" app:APKTOOL_DUPLICATE_attr_0x7f0401bc="@dimen/APKTOOL_DUPLICATE_dimen_0x7f07028f" />
    </Row>
</Keyboard>